--- a/style.css
+++ b/style.css
@@ -331,7 +331,7 @@ nav a:nth-child(5){
 	box-shadow: 10px 10px  #FED100;
 }
 .form_input{
-	outline:none;
+	outline: none;
 	height: 40px;
 	margin-top: 50px;
 	margin-right: 60px;
@@ -389,7 +389,7 @@ footer{
 
 @media(max-width: 900px){
 	body{
-		overflow-x: hidden;
+		-webkit-overflow-x: hidden;
 	}
 	.menu_active_block{
 		overflow-y: hidden;
@@ -553,6 +553,7 @@ footer{
 	/*Form*/
 	.form_blocks,
 	.form{
+		text-align: center;
 		width: 100%;
 		display: flex;
 		flex-direction: column;
