--- a/style.css
+++ b/style.css
@@ -244,6 +244,7 @@ nav a:nth-child(5){
 }
 .swiper-slide p img{
 	margin-right: 10px;
+	-webkit-margin-right: 10px;
 }
 .text_block .button_two{
 	align-self: center;
@@ -391,7 +392,7 @@ footer{
 
 @media(max-width: 900px){
 	body{
-		-webkit-overflow-x: hidden;
+		overflow-x: hidden;
 	}
 	.menu_active_block{
 		overflow-y: hidden;
