--- a/style.css
+++ b/style.css
@@ -7,8 +7,11 @@
 	color: #333333;
 }
 body{
-	-webkit-margin-end: 0px;
-	overflow-x: hidden;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;    
+    overflow-x: hidden;
 }
 /*Кнопки*/
 .button_one{
