--- a/style.css
+++ b/style.css
@@ -389,7 +389,7 @@ footer{
 
 @media(max-width: 900px){
 	body{
-		max-width: 900px;
+		mix-width: 900px;
 		overflow-x: hidden;
 	}
 	.menu_active_block{
