--- a/style.css
+++ b/style.css
@@ -389,7 +389,7 @@ footer{
 
 @media(max-width: 900px){
 	body{
-		overflow-x: hidden;
+		min-width: 100%;
 	}
 	.menu_active_block{
 		overflow: hidden;
@@ -607,10 +607,5 @@ footer{
 	}
 	.footer_columns p{
 		font-size: 25px;
-	}
-@media(max-width: 485px){
-	body{
-		min-width: 400px;
-	}
 	}
 }
