--- a/style.css
+++ b/style.css
@@ -388,9 +388,6 @@ footer{
 
 
 @media(max-width: 900px){
-	body{
-		min-width: 100%;
-	}
 	.menu_active_block{
 		overflow: hidden;
 	}
@@ -608,4 +605,9 @@ footer{
 	.footer_columns p{
 		font-size: 25px;
 	}
+@media(max-width: 375px){
+	body{
+		min-width: 375px;
+	}
+}
 }
